deploy/homelab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: duckserver
  namespace: duck
spec:
  selector:
    app: duckserver
  ports:
    - port: 80
      targetPort: 8080
